# cadstream

./: Cargo.toml  README.md  test_cube.stl
benches/: parser_bench.rs
src/: cad_data.rs  file_watcher.rs  lib.rs  main.rs  parsers.rs  rerun_renderer.rs  stl_parser.rs
src/parsers/: custom_stl_parser.rs  stl_io_parser.rs
