[package]
name = "cadstream"
version = "0.1.0"
edition = "2021"

[dependencies]
# Math and data handling
glam = "0.27"

# File operations and async
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"

# Utility
env_logger = "0.11"

# Rerun integration for visualization
rerun = { version = "0.23.4", features = ["web_viewer"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false
